--- a/index.html
+++ b/index.html
@@ -22,109 +22,87 @@
 
         <title>Hello you :)</title>
     </head>
-    <body>
-        <div class="attached-heading">
-            <div class="heading-container">
-                <span class="heading-text name">Minhajul Islam</span><br />
-                <span class="heading-text title">Creative Designer</span>
-                <br /><span class="contact"><a href="mailto:mi@minhajul.design">mi@minhajul.design</a></span
-                ><span class="contact"><a href="tel:07903392888">07903392888</a></span>
-            </div>
-        </div>
-        <div class="cv-section meeting">
-            <div class="button-container">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/Minhajul_Islam_CV.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg"
-                >
-                    CV
-                </button>
-            </div>
-        </div>
-        <div class="coffee cv-section">
-            <div class="button-container">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/Minhajul+Islam+Portfolio.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg"
-                >
-                    Portfolio
-                </button>
-            </div>
-        </div>
-        <div class="mail cv-section">
-            <div class="button-container two-buttons">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/Brand_Guidelines_kukd.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg "
-                >
-                    Brand Guidelines
-                </button>
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/Brand_Identity_kukd.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg "
-                >
-                    Brand Identity
-                </button>
-            </div>
-        </div>
 
-        <div class="cv-section sketch">
-            <div class="button-container">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/KukdBrochure.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg"
-                >
-                    Kukd Brochure
-                </button>
+    <body>
+        <div class="header-container">
+            <div class="heading row h-100">
+                <div class="blue-part col-5">
+                    <img class="profile-picture" />
+                    <span class="creative">Be Creative</span>
+                </div>
+                <div class="white-part col-7">
+                    <div class="heading-container">
+                        <span class="heading-text name">Minhajul Islam</span><br />
+                        <span class="heading-text title">
+                            <div id="typed-strings">
+                                <p>Creative Designer</p>
+                                <p>Graphic Designer</p>
+                                <p>UI</p>
+                                <p>Nutritionist</p>
+                                <p>Packaging Designer</p>
+                                <p>Advanced Personal Trainer</p>
+                            </div>
+                            <span id="typed"></span>
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="cv-section prototype">
-            <div class="button-container">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/kpos.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg"
-                >
-                    Kpos Brochure
-                </button>
-            </div>
-        </div>
-        <div class="cv-section pencils">
-            <div class="button-container">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/Cateres_Depot_Brand_Guidlines.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg"
-                >
-                    Caterers Depot
-                </button>
-            </div>
-        </div>
-        <div class="cv-section glasses">
-            <div class="button-container">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/Linen_Brochure.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg"
-                >
-                    Linen Brochure
-                </button>
-            </div>
-        </div>
-        <div class="cv-section tablet">
-            <div class="button-container">
-                <button
-                    onclick="window.open('https:\/\/portfolio-minhajul.s3.eu-west-2.amazonaws.com/Packaging_Design.pdf')"
-                    type="button"
-                    class="btn btn-primary btn-lg"
-                >
-                    Packaging Design
-                </button>
+        <div class="header-container">
+            <div class="cv-container-part">
+                <div class="row cv">
+                    <div class="pl-5 col-7">
+                        <div class="row cv-row">
+                            <div class="col justify-content-center align-self-center">
+                                <a onclick="window.open('https://drive.google.com/file/d/1RcAuQ-C1XWkoktTpBaiJ2-1cD4bHERBj/view?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="packaging-design"></div>
+                                </div>
+                                </a>
+                            </div>
+                            <div class="col justify-content-center align-self-center">
+                                <a onclick="window.open('https://drive.google.com/file/d/1ln1gaUUDGCfT8X3CnHSrOCKNo1xhC3Bw/view?usp=sharing')">
+                                    <div class="backdrop">
+                                        <div class="brochure"></div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col justify-content-center align-self-center">
+                                <a onclick="window.open('https://drive.google.com/file/d/1ROWtyrl6o2eVtfchA8USP8MWeiG0Ftkd/view?usp=sharing')">
+                                    <div class="backdrop">
+                                        <div class="ui-design"></div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="row cv-row">
+                            <a onclick="window.open('https://drive.google.com/file/d/1D-FqKTYkuiuxUZ81Ck37PENy8XcTFead/view?usp=sharing')">
+                            <div class="col justify-content-center align-self-center">
+                                <div class="backdrop">
+                                    <div class="brand-identity"></div>
+                                </div>
+                                </a>
+                            </div>
+                            <div class="col justify-content-center align-self-center">
+                                <a onclick="window.open('')">
+                                <div class="backdrop">
+                                    <div class="video-design"></div>
+                                </div>
+                                </a>
+                            </div>
+                            <div class="col justify-content-center align-self-center">
+                                <a onclick="window.open('')">
+                                <div class="backdrop">
+                                    <div class="web-design"></div>
+                                </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom-bar">
+                    <a href="mailto:info@minhajul.design"><div class="email-link"></div></a>
+                </div>
             </div>
         </div>
 
@@ -141,6 +119,7 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"
         ></script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
         <script>
             $("button").on("mouseover", function() {
                 $(this).animate({ "margin-top": 0 }, 200);
@@ -149,6 +128,13 @@
             $("button").on("mouseout", function() {
                 $(this).animate({ "margin-top": 20 }, 200);
                 $(this).removeClass("hover");
+            });
+
+            var typed = new Typed("#typed", {
+                stringsElement: "#typed-strings",
+                typeSpeed: 30,
+                backSpeed: 10,
+                loop: true
             });
         </script>
     </body>
