--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
     <body>
         <div class="header-container">
-            <div class="heading row h-100">
-                <div class="blue-part col-5">
-                    <img class="profile-picture" />
-                    <span class="creative">Be Creative</span>
+            <div id="heading" class="heading row h-100">
+                <div id="blue-part" class="blue-part col-5">
+                    <img class="profile-picture" id="profile-picture" />
+                    <span class="creative" id="creative">Be Creative</span>
                 </div>
-                <div class="white-part col-7">
+                <div id="white-part" class="white-part col-7">
                     <div class="heading-container">
-                        <span class="heading-text name">Minhajul Islam</span><br />
+                        <span class="heading-text name">Minhajul</span><br />
                         <span class="heading-text title">
                             <div id="typed-strings">
                                 <p>Creative Designer</p>
@@ -51,57 +51,53 @@
         <div class="header-container">
             <div class="cv-container-part">
                 <div class="row cv">
-                    <div class="pl-5 col-7">
-                        <div class="row cv-row">
-                            <div class="col justify-content-center align-self-center">
-                                <a onclick="window.open('https://drive.google.com/file/d/1RcAuQ-C1XWkoktTpBaiJ2-1cD4bHERBj/view?usp=sharing')">
+                    <div class="pl-5 col-7 row" id="buttons-container">
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/file/d/1RcAuQ-C1XWkoktTpBaiJ2-1cD4bHERBj/view?usp=sharing')">
                                 <div class="backdrop">
                                     <div class="packaging-design"></div>
                                 </div>
-                                </a>
-                            </div>
-                            <div class="col justify-content-center align-self-center">
-                                <a onclick="window.open('https://drive.google.com/file/d/1ln1gaUUDGCfT8X3CnHSrOCKNo1xhC3Bw/view?usp=sharing')">
-                                    <div class="backdrop">
-                                        <div class="brochure"></div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col justify-content-center align-self-center">
-                                <a onclick="window.open('https://drive.google.com/file/d/1ROWtyrl6o2eVtfchA8USP8MWeiG0Ftkd/view?usp=sharing')">
-                                    <div class="backdrop">
-                                        <div class="ui-design"></div>
-                                    </div>
-                                </a>
-                            </div>
+                            </a>
                         </div>
-                        <div class="row cv-row">
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/file/d/1ln1gaUUDGCfT8X3CnHSrOCKNo1xhC3Bw/view?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="brochure"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/file/d/1ROWtyrl6o2eVtfchA8USP8MWeiG0Ftkd/view?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="ui-design"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
                             <a onclick="window.open('https://drive.google.com/file/d/1D-FqKTYkuiuxUZ81Ck37PENy8XcTFead/view?usp=sharing')">
-                            <div class="col justify-content-center align-self-center">
                                 <div class="backdrop">
                                     <div class="brand-identity"></div>
                                 </div>
-                                </a>
-                            </div>
-                            <div class="col justify-content-center align-self-center">
-                                <a onclick="window.open('')">
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('')">
                                 <div class="backdrop">
                                     <div class="video-design"></div>
                                 </div>
-                                </a>
-                            </div>
-                            <div class="col justify-content-center align-self-center">
-                                <a onclick="window.open('')">
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('')">
                                 <div class="backdrop">
                                     <div class="web-design"></div>
                                 </div>
-                                </a>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="bottom-bar">
-                    <a href="mailto:info@minhajul.design"><div class="email-link"></div></a>
+                <div id="bottom-bar" class="bottom-bar">
+                    <a class="email-link" href="mailto:info@minhajul.design"></a>
                 </div>
             </div>
         </div>
