--- a/index.html
+++ b/index.html
@@ -81,16 +81,9 @@
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('')">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1DslVE4hiS4N8jj0XTLwH--dGYdg59AN8')">
                                 <div class="backdrop">
                                     <div class="video-design"></div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('')">
-                                <div class="backdrop">
-                                    <div class="web-design"></div>
                                 </div>
                             </a>
                         </div>
