--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div id="blue-part" class="blue-part col-5">
                     <img class="profile-picture" id="profile-picture" />
                     <span class="creative" id="creative">Be Creative</span>
+                    <span class="coded" id="coded"><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer">Coded by Naz</a></span>
                 </div>
                 <div id="white-part" class="white-part col-7">
                     <div class="heading-container">
