--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 <div id="blue-part" class="blue-part col-5">
                     <img class="profile-picture" id="profile-picture" />
                     <span class="creative" id="creative">Be Creative</span>
-                    <span class="coded" id="coded"><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer">Coded by Narcis.dev</a></span>
                 </div>
                 <div id="white-part" class="white-part col-7">
                     <div class="heading-container">
@@ -91,6 +90,7 @@
                     </div>
                 </div>
                 <div id="bottom-bar" class="bottom-bar">
+                    <span class="coded" id="coded"><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer">Coded by Narcis Cristea</a></span>
                     <a class="email-link" href="mailto:info@minhajul.design"></a>
                 </div>
             </div>
