--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div id="bottom-bar" class="bottom-bar">
-                    <span class="coded" id="coded"><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer">Coded by Narcis Cristea</a></span>
+                    <span class="coded" id="coded"><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer"> Copyright © Narcis Cristea 2021</a></span>
                     <a class="email-link" href="mailto:info@minhajul.design"></a>
                 </div>
             </div>
