Updated links to new gdrive folder

--- a/index.html
+++ b/index.html
@@ -53,35 +53,35 @@
                 <div class="row cv">
                     <div class="pl-5 col-7 row" id="buttons-container">
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1RcAuQ-C1XWkoktTpBaiJ2-1cD4bHERBj/view?usp=sharing')">
+                            <a onclick="window.open('https://drive.google.com/file/d/1jz0om2ZKoHVK76jlKvS_vELiC4XKyC8I/view?usp=drivesdk')">
                                 <div class="backdrop">
                                     <div class="packaging-design"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1ln1gaUUDGCfT8X3CnHSrOCKNo1xhC3Bw/view?usp=sharing')">
+                            <a onclick="window.open('https://drive.google.com/file/d/1WayJLszcUvWinNG7RNdwC51NvS-KziAQ/view?usp=drivesdk')">
                                 <div class="backdrop">
                                     <div class="brochure"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1ROWtyrl6o2eVtfchA8USP8MWeiG0Ftkd/view?usp=sharing')">
+                            <a onclick="window.open('https://drive.google.com/file/d/1LatP6HcOoil0YBShEwYstkk9FCKeozLD/view?usp=drivesdk')">
                                 <div class="backdrop">
                                     <div class="ui-design"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1D-FqKTYkuiuxUZ81Ck37PENy8XcTFead/view?usp=sharing')">
+                            <a onclick="window.open('https://drive.google.com/file/d/1H30dqd-YPs5ZjNlrmuPvUqs0mnKPZmMG/view?usp=drivesdk')">
                                 <div class="backdrop">
                                     <div class="brand-identity"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/drive/folders/1DslVE4hiS4N8jj0XTLwH--dGYdg59AN8')">
+                            <a onclick="window.open('https://drive.google.com/folderview?id=1_RsOVQOWBNgrL-dZ3WNu91W8nefQNUCI')">
                                 <div class="backdrop">
                                     <div class="video-design"></div>
                                 </div>
