--- a/index.html
+++ b/index.html
@@ -87,10 +87,19 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1NeBeN-pQIuokO8GuFCPhGFFdVClrQJjK?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="more"></div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div id="bottom-bar" class="bottom-bar">
-                    <span class="coded" id="coded"><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer"> Copyright © Narcis Cristea 2021</a></span>
+                    <span class="coded" id="coded"
+                        ><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer"> Copyright © Narcis Cristea 2021</a></span
+                    >
                     <a class="email-link" href="mailto:info@minhajul.design"></a>
                 </div>
             </div>
@@ -111,11 +120,11 @@
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
         <script>
-            $("button").on("mouseover", function() {
+            $("button").on("mouseover", function () {
                 $(this).animate({ "margin-top": 0 }, 200);
                 $(this).addClass("hover");
             });
-            $("button").on("mouseout", function() {
+            $("button").on("mouseout", function () {
                 $(this).animate({ "margin-top": 20 }, 200);
                 $(this).removeClass("hover");
             });
@@ -124,7 +133,7 @@
                 stringsElement: "#typed-strings",
                 typeSpeed: 30,
                 backSpeed: 10,
-                loop: true
+                loop: true,
             });
         </script>
     </body>
