added content specialist title

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
                             <div id="typed-strings">
                                 <p>Creative Designer</p>
                                 <p>Graphic Designer</p>
+                                <p>Content Specialist</p>
                                 <p>UI</p>
-                                <p>Nutritionist</p>
                                 <p>Packaging Designer</p>
+                                <p>Nutritionist</p>
                                 <p>Advanced Personal Trainer</p>
                             </div>
                             <span id="typed"></span>
