--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                                 <p>Creative Designer</p>
                                 <p>Graphic Designer</p>
                                 <p>Content Specialist</p>
+                                <p>Senior Digital Specialist</p>
                                 <p>UI</p>
                                 <p>Packaging Designer</p>
                                 <p>Nutritionist</p>
