updated dead links

--- a/index.html
+++ b/index.html
@@ -55,42 +55,42 @@
                 <div class="row cv">
                     <div class="pl-5 col-7 row" id="buttons-container">
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1jz0om2ZKoHVK76jlKvS_vELiC4XKyC8I/view?usp=drivesdk')">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1GVlB26ePtJmSC8yrh5vlqnb4fm4IR2TW?usp=sharing')">
                                 <div class="backdrop">
                                     <div class="packaging-design"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1WayJLszcUvWinNG7RNdwC51NvS-KziAQ/view?usp=drivesdk')">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1w8DxnSLqvjEck3z2SQaz7vXq-b1Q3I7H?usp=sharing')">
                                 <div class="backdrop">
                                     <div class="brochure"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1LatP6HcOoil0YBShEwYstkk9FCKeozLD/view?usp=drivesdk')">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1plJqC-O19aXJlLqWYAUlgIZx3QVmlCYh?usp=sharing')">
                                 <div class="backdrop">
                                     <div class="ui-design"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/file/d/1H30dqd-YPs5ZjNlrmuPvUqs0mnKPZmMG/view?usp=drivesdk')">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1ehXFNYCCOeuAYeDsGuCstxSdB4Nb0Lf9?usp=sharing')">
                                 <div class="backdrop">
                                     <div class="brand-identity"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/folderview?id=1_RsOVQOWBNgrL-dZ3WNu91W8nefQNUCI')">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1BgpIJdKoCgBEp3boJC1wm1TmEeE1vJAh?usp=sharing')">
                                 <div class="backdrop">
                                     <div class="video-design"></div>
                                 </div>
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="window.open('https://drive.google.com/drive/folders/1NeBeN-pQIuokO8GuFCPhGFFdVClrQJjK?usp=sharing')">
+                            <a onclick="alert('Coming soon!')">
                                 <div class="backdrop">
                                     <div class="more"></div>
                                 </div>
