Added more folder link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </a>
                         </div>
                         <div class="col justify-content-center align-self-center">
-                            <a onclick="alert('Coming soon!')">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1741sFROG2QdLpr-li3k1MHCTF8Htk94H?usp=sharing')">
                                 <div class="backdrop">
                                     <div class="more"></div>
                                 </div>
