Revert "coming soon"

--- a/index.html
+++ b/index.html
@@ -1,12 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coming soon</title>
-  </head>
-  <body>
-    <p style="font-size: 13vw; text-align: center">Coming soon</p>
-  </body>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="images.css" />
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+        <!-- Bootstrap CSS -->
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous"
+        />
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa&display=swap" rel="stylesheet" />
+
+        <title>Hello you :)</title>
+    </head>
+
+    <body>
+        <div class="header-container">
+            <div id="heading" class="heading row h-100">
+                <div id="blue-part" class="blue-part col-5">
+                    <img class="profile-picture" id="profile-picture" />
+                    <span class="creative" id="creative">Be Creative</span>
+                </div>
+                <div id="white-part" class="white-part col-7">
+                    <div class="heading-container">
+                        <span class="heading-text name">Minhajul</span><br />
+                        <span class="heading-text title">
+                            <div id="typed-strings">
+                                <p>Creative Designer</p>
+                                <p>Graphic Designer</p>
+                                <p>Content Specialist</p>
+                                <p>Senior Digital Specialist</p>
+                                <p>UI</p>
+                                <p>Packaging Designer</p>
+                                <p>Nutritionist</p>
+                                <p>Advanced Personal Trainer</p>
+                            </div>
+                            <span id="typed"></span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header-container">
+            <div class="cv-container-part">
+                <div class="row cv">
+                    <div class="pl-5 col-7 row" id="buttons-container">
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1GVlB26ePtJmSC8yrh5vlqnb4fm4IR2TW?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="packaging-design"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1w8DxnSLqvjEck3z2SQaz7vXq-b1Q3I7H?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="brochure"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1plJqC-O19aXJlLqWYAUlgIZx3QVmlCYh?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="ui-design"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1ehXFNYCCOeuAYeDsGuCstxSdB4Nb0Lf9?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="brand-identity"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1BgpIJdKoCgBEp3boJC1wm1TmEeE1vJAh?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="video-design"></div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col justify-content-center align-self-center">
+                            <a onclick="window.open('https://drive.google.com/drive/folders/1741sFROG2QdLpr-li3k1MHCTF8Htk94H?usp=sharing')">
+                                <div class="backdrop">
+                                    <div class="more"></div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div id="bottom-bar" class="bottom-bar">
+                    <span class="coded" id="coded"
+                        ><a target="_blank" href="https://narcis.dev" rel="noopener noreferrer"> Copyright © Narcis Cristea 2021</a></span
+                    >
+                    <a class="email-link" href="mailto:info@minhajul.design"></a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+        <script>
+            $("button").on("mouseover", function () {
+                $(this).animate({ "margin-top": 0 }, 200);
+                $(this).addClass("hover");
+            });
+            $("button").on("mouseout", function () {
+                $(this).animate({ "margin-top": 20 }, 200);
+                $(this).removeClass("hover");
+            });
+
+            var typed = new Typed("#typed", {
+                stringsElement: "#typed-strings",
+                typeSpeed: 30,
+                backSpeed: 10,
+                loop: true,
+            });
+        </script>
+    </body>
 </html>
